--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/PageAttributes/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/PageAttributes/Contents.plist
@@ -20,9 +20,7 @@
 				</dict>
 				<key>ColourStyles</key>
 				<dict>
-					<key>Glide</key>
-					<dict/>
-					<key>Ruby</key>
+					<key>Veerle</key>
 					<dict/>
 				</dict>
 				<key>CreditRapidWeaver</key>
