--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/2-ALife-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/2-ALife-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-20T23:13:42Z</date>
+						<date>2019-11-22T19:29:08Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -170,12 +170,22 @@
 								<key>Size</key>
 								<integer>19481</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wgmIAuepvJFg
+								INqwDCfPXQ==
+								</data>
+								<key>Size</key>
+								<integer>1879</integer>
+							</dict>
 							<key>files/stacks_page_page75.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								zZVzGTe22sVW
-								nasYFEm2Pw==
+								6irtz1lJtyYA
+								85B2St8yXg==
 								</data>
 								<key>Size</key>
 								<integer>160074</integer>
@@ -184,8 +194,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DPRYKgVnlhAC
-								U0JSXQGgIg==
+								p2O6m8o20oXI
+								mBEU8AXPYg==
 								</data>
 								<key>Size</key>
 								<integer>24289</integer>
@@ -194,11 +204,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2Eb1A1CjqTTi
-								u0HV7O8dtg==
+								z/SyfnmgN0tp
+								aKVXc1GLSw==
 								</data>
 								<key>Size</key>
-								<integer>76285</integer>
+								<integer>76421</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
