--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/4-ALife-Calls/ChildPages/3-Art/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/4-ALife-Calls/ChildPages/3-Art/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-20T23:13:42Z</date>
+						<date>2019-11-22T19:29:08Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -184,11 +184,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								a2WJsGGYuo5W
-								iEZzzrMLMw==
+								vj4ZIk1+X0Cv
+								bWdypq5rEQ==
 								</data>
 								<key>Size</key>
-								<integer>57010</integer>
+								<integer>57058</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
