--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/5-ALife-Speakers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/5-ALife-Speakers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-20T23:13:42Z</date>
+						<date>2019-11-22T19:29:08Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -304,11 +304,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZAkT195+1jUQ
-								CZnXvZKHUA==
+								XAGco7n+WBda
+								ZNDbdYtcNA==
 								</data>
 								<key>Size</key>
-								<integer>88708</integer>
+								<integer>88756</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
