--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/6-ALife-Sponsors/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/6-ALife-Sponsors/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-20T23:13:43Z</date>
+						<date>2019-11-22T19:29:08Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -334,11 +334,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ww+60z/N3dli
-								3AkuNHYykg==
+								57zkzDYRbYA9
+								/IEmVx9K7Q==
 								</data>
 								<key>Size</key>
-								<integer>77696</integer>
+								<integer>77744</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
