--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/Contents.plist
@@ -13,10 +13,10 @@
 				<string>ALIFE 2020</string>
 				<key>CreatedDate</key>
 				<date>2016-02-08T13:45:29Z</date>
+				<key>CustomThemeName</key>
+				<string>Foundation</string>
 				<key>ID</key>
 				<string>page64</string>
-				<key>MostRecentlySelectedStyleName</key>
-				<string>Theme Default</string>
 				<key>PageTitle</key>
 				<string>ALIFE 2020</string>
 				<key>PluginClassName</key>
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-20T23:13:42Z</date>
+						<date>2019-11-22T19:29:08Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -510,35 +510,45 @@
 								<key>Size</key>
 								<integer>12191</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wgmIAuepvJFg
+								INqwDCfPXQ==
+								</data>
+								<key>Size</key>
+								<integer>1879</integer>
+							</dict>
 							<key>files/stacks_page_page64.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								NVSmvy0yRI8a
-								BSqUimAEaA==
+								ChdNEEcYSOAu
+								QnljeP+dXA==
 								</data>
 								<key>Size</key>
-								<integer>261291</integer>
+								<integer>404642</integer>
 							</dict>
 							<key>files/stacks_page_page64.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Gsrt3hq0JUjT
-								JZya2xzlvA==
+								UCqp8+w8hNI+
+								Z+aLbscA4g==
 								</data>
 								<key>Size</key>
-								<integer>28293</integer>
+								<integer>32699</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								HuzImd93kPeP
-								vcDRkRJDeA==
+								6x6vZVGHnyCI
+								Pqh7NIsiTw==
 								</data>
 								<key>Size</key>
-								<integer>181050</integer>
+								<integer>313160</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
