alife registration and menu
alife registration and menu

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/1-ALife-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/1-ALife-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-22T19:29:08Z</date>
+						<date>2019-11-23T14:52:25Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -254,11 +254,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CVZMF9flkAw0
-								FlFfuQu0hw==
+								vSOZ2yQcCeV2
+								hNGTM8t57Q==
 								</data>
 								<key>Size</key>
-								<integer>194164</integer>
+								<integer>194271</integer>
 							</dict>
 							<key>files/stacks_page_page65.js</key>
 							<dict>
@@ -274,11 +274,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hRvMQlBZYR0V
-								qkA3NaKfpg==
+								YpC3P8V6vqPr
+								M7VtZUPUTA==
 								</data>
 								<key>Size</key>
-								<integer>112831</integer>
+								<integer>113039</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
