--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/6-ALife-Sponsors/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/6-ALife-Sponsors/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-22T19:29:08Z</date>
+						<date>2019-11-23T14:52:25Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -314,11 +314,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TsGCgjsIZbkE
-								FRzaZ09cvQ==
+								msfmu6Qof6Mj
+								gdQ41CCQDg==
 								</data>
 								<key>Size</key>
-								<integer>151338</integer>
+								<integer>151445</integer>
 							</dict>
 							<key>files/stacks_page_page78.js</key>
 							<dict>
@@ -334,11 +334,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								57zkzDYRbYA9
-								/IEmVx9K7Q==
+								D6SJn1X6YcxN
+								tDQuDQegrQ==
 								</data>
 								<key>Size</key>
-								<integer>77744</integer>
+								<integer>78040</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
