--- a/vermontcomplexsystems-foundation.rw8/Resources/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Resources/Contents.plist
@@ -19,6 +19,7 @@
 				<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 				<string>A545D375-1B6B-4E93-BB57-124F57120FE2</string>
 				<string>AB50FD52-A54E-4F22-994D-E15A7EF224A2</string>
+				<string>C6A9AA34-3DBA-4093-8F29-9F58F73B2A1D</string>
 			</array>
 		</dict>
 	</array>
