--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/2-ALife-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/2-ALife-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-22T19:29:08Z</date>
+						<date>2019-11-23T14:57:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -170,25 +170,15 @@
 								<key>Size</key>
 								<integer>19481</integer>
 							</dict>
-							<key>files/stacks.css</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								wgmIAuepvJFg
-								INqwDCfPXQ==
-								</data>
-								<key>Size</key>
-								<integer>1879</integer>
-							</dict>
 							<key>files/stacks_page_page75.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								6irtz1lJtyYA
-								85B2St8yXg==
+								UZRKQJ7S20Hx
+								8aLU9XezSw==
 								</data>
 								<key>Size</key>
-								<integer>160074</integer>
+								<integer>160181</integer>
 							</dict>
 							<key>files/stacks_page_page75.js</key>
 							<dict>
@@ -204,11 +194,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								z/SyfnmgN0tp
-								aKVXc1GLSw==
+								fF6oghLYnSHi
+								AnUqg0X9Nw==
 								</data>
 								<key>Size</key>
-								<integer>76421</integer>
+								<integer>76605</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
