--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/3-ALife-Registration/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/3-ALife-Registration/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-22T19:29:08Z</date>
+						<date>2019-11-23T15:01:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -160,15 +160,25 @@
 								<key>Size</key>
 								<integer>19481</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wgmIAuepvJFg
+								INqwDCfPXQ==
+								</data>
+								<key>Size</key>
+								<integer>1879</integer>
+							</dict>
 							<key>files/stacks_page_page72.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								gSCDvJVT0uWA
-								ZkEoiirL5w==
+								F/PLcLZzqOfi
+								HPL3vEq9RA==
 								</data>
 								<key>Size</key>
-								<integer>139587</integer>
+								<integer>139112</integer>
 							</dict>
 							<key>files/stacks_page_page72.js</key>
 							<dict>
@@ -184,11 +194,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/4vhiqLYRenV
-								tVgd3/922w==
+								ULvpvp8BQ+/J
+								LI5X0fsXRQ==
 								</data>
 								<key>Size</key>
-								<integer>65534</integer>
+								<integer>65515</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
