--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/4-ALife-Calls/ChildPages/1-Papers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/4-ALife-Calls/ChildPages/1-Papers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-22T19:29:08Z</date>
+						<date>2019-11-23T14:52:25Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -164,11 +164,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								t+gg2Ytzrh+N
-								Ot1xXc7RUw==
+								ivlLKixCODtv
+								8lszga8eQw==
 								</data>
 								<key>Size</key>
-								<integer>128887</integer>
+								<integer>128994</integer>
 							</dict>
 							<key>files/stacks_page_page81.js</key>
 							<dict>
@@ -184,11 +184,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YrI245CT3UsL
-								X0OPpy2lFw==
+								XawWWsHDeUDG
+								TO7rGty/FQ==
 								</data>
 								<key>Size</key>
-								<integer>62696</integer>
+								<integer>62992</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
