--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/4-ALife-Calls/ChildPages/3-Art/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/4-ALife-Calls/ChildPages/3-Art/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-22T19:29:08Z</date>
+						<date>2019-11-23T14:52:25Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -164,11 +164,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DJvjvlFH9vrE
-								+deIyceV7w==
+								islF3I0COtw7
+								UBFKjRK18A==
 								</data>
 								<key>Size</key>
-								<integer>127697</integer>
+								<integer>127804</integer>
 							</dict>
 							<key>files/stacks_page_page30.js</key>
 							<dict>
@@ -184,11 +184,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vj4ZIk1+X0Cv
-								bWdypq5rEQ==
+								Qg/urO6wuCH1
+								LvwyqPdPvA==
 								</data>
 								<key>Size</key>
-								<integer>57058</integer>
+								<integer>57354</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
