--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/5-ALife-Speakers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/5-ALife-Speakers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-22T19:29:08Z</date>
+						<date>2019-11-23T14:57:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -284,11 +284,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ROqqVkhMGiy/
-								2zhgs4qN6g==
+								UYaMh3zlQluy
+								s65CYGCQ+g==
 								</data>
 								<key>Size</key>
-								<integer>168294</integer>
+								<integer>168401</integer>
 							</dict>
 							<key>files/stacks_page_page77.js</key>
 							<dict>
@@ -304,11 +304,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								XAGco7n+WBda
-								ZNDbdYtcNA==
+								C0xy+UEXuQ7C
+								ArlXvFm0bg==
 								</data>
 								<key>Size</key>
-								<integer>88756</integer>
+								<integer>89029</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
