--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/7-ALife-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/7-ALife-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-11-22T19:29:08Z</date>
+						<date>2019-11-23T15:01:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -360,15 +360,25 @@
 								<key>Size</key>
 								<integer>12191</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wgmIAuepvJFg
+								INqwDCfPXQ==
+								</data>
+								<key>Size</key>
+								<integer>1879</integer>
+							</dict>
 							<key>files/stacks_page_page79.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								wkUFzRkLf0tg
-								SuARyVXaNg==
+								W28Bgs9ZP2nT
+								TfZb4PHn5A==
 								</data>
 								<key>Size</key>
-								<integer>197979</integer>
+								<integer>197452</integer>
 							</dict>
 							<key>files/stacks_page_page79.js</key>
 							<dict>
@@ -384,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pkB1zS5PzvMx
-								GnDmuNkrBQ==
+								LgOFZ6j68HTz
+								lYIG/7R37Q==
 								</data>
 								<key>Size</key>
-								<integer>124950</integer>
+								<integer>124922</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
