--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -10,11 +10,13 @@
 		<string>page5</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<true/>
+	<false/>
 	<key>projectViewVisible</key>
 	<true/>
 	<key>projectViewWidth</key>
 	<real>228</real>
+	<key>selectedInspectorTab</key>
+	<string>pageSettings</string>
 	<key>selectedItems</key>
 	<array>
 		<string>page89</string>
