add previous lecture videos to Talkboctopus event page

--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -4,6 +4,7 @@
 <dict>
 	<key>expandedItems</key>
 	<array>
+		<string>page2</string>
 		<string>page16</string>
 	</array>
 	<key>pageInspectorVisible</key>
