--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/1-Talkboctopus/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/1-Talkboctopus/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2021-11-05T15:58:35Z</date>
+						<date>2021-11-07T21:04:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -154,21 +154,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wZQ9RaYFWNhC
-								CCE7ZQKM5A==
+								Ch/ZBQuTpqor
+								Jl5ttAB5Sw==
 								</data>
 								<key>Size</key>
-								<integer>10727</integer>
+								<integer>10684</integer>
 							</dict>
 							<key>files/stacks-image-17e14fc-200x250@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								peu1uU8ce1Uu
-								oKSCrIn1uA==
+								aHt+1uRu+hLO
+								XD3O3sro0Q==
 								</data>
 								<key>Size</key>
-								<integer>15357</integer>
+								<integer>15346</integer>
 							</dict>
 							<key>files/stacks-image-1eef836-200x250.jpg</key>
 							<dict>
@@ -194,21 +194,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sO/TW97skdQ5
-								IHbQNra6vQ==
+								utACWJgF+isC
+								WXoMChmxoQ==
 								</data>
 								<key>Size</key>
-								<integer>12775</integer>
+								<integer>12740</integer>
 							</dict>
 							<key>files/stacks-image-2b2723f-200x250@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								iJt1dBRuizOw
-								iFxCyhHPyg==
+								L6w+OfcbegZv
+								afB7p360Ow==
 								</data>
 								<key>Size</key>
-								<integer>19398</integer>
+								<integer>19412</integer>
 							</dict>
 							<key>files/stacks-image-2d2c788-200x250.jpg</key>
 							<dict>
@@ -284,21 +284,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KylVK4A+Qm4H
-								e7g8r051nQ==
+								Nvhq8XvDl5bx
+								7IX6kH9p/w==
 								</data>
 								<key>Size</key>
-								<integer>121578</integer>
+								<integer>121260</integer>
 							</dict>
 							<key>files/stacks-image-456042f-800x1200@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								CvNp6ZJmJsNz
-								BR+MM6GOiw==
+								TnY0ogG+0HzC
+								lmDuHCjZ6g==
 								</data>
 								<key>Size</key>
-								<integer>197286</integer>
+								<integer>197199</integer>
 							</dict>
 							<key>files/stacks-image-4caf911-200x250.jpg</key>
 							<dict>
@@ -404,21 +404,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fwtaE3mjFjZn
-								oKJtnkuiyA==
+								6RrUcyemhk3X
+								7SLxfqPYAQ==
 								</data>
 								<key>Size</key>
-								<integer>30797</integer>
+								<integer>30828</integer>
 							</dict>
 							<key>files/stacks-image-6ad6ed1-300x200@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								z3AXdxnjTZUJ
-								ZBKCDuSj4A==
+								eOKCoRhlEaet
+								3cFeaT3x0Q==
 								</data>
 								<key>Size</key>
-								<integer>58118</integer>
+								<integer>58117</integer>
 							</dict>
 							<key>files/stacks-image-7228587-200x250.png</key>
 							<dict>
@@ -474,21 +474,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								MmDCBaLinkWL
-								wxzBMgDvpg==
+								1sbnj5VjSw/G
+								tyOkQi/DnQ==
 								</data>
 								<key>Size</key>
-								<integer>15798</integer>
+								<integer>15824</integer>
 							</dict>
 							<key>files/stacks-image-893502b-300x316@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								gsq8O5Kp50x1
-								Ex/2P+4O4w==
+								MtKDG6/FLCxA
+								mZhvsYbx3g==
 								</data>
 								<key>Size</key>
-								<integer>24549</integer>
+								<integer>24518</integer>
 							</dict>
 							<key>files/stacks-image-89bb320-200x250.jpg</key>
 							<dict>
@@ -684,21 +684,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								6gxMjO0cm7P8
-								EfT7zPbksA==
+								THqUs3UE3K+g
+								jyBqp/LmJA==
 								</data>
 								<key>Size</key>
-								<integer>19683</integer>
+								<integer>19708</integer>
 							</dict>
 							<key>files/stacks-image-e60a35d-300x300@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								7LcJdanPE69Y
-								yDCcGEFpmw==
+								IQfc/ShMa6Hx
+								HvHWsbHCow==
 								</data>
 								<key>Size</key>
-								<integer>33302</integer>
+								<integer>33361</integer>
 							</dict>
 							<key>files/stacks-image-e97f241-400x164.png</key>
 							<dict>
@@ -854,11 +854,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kbSCyToO8zsa
-								NG8nu0pLig==
+								RJrWaXnLREF3
+								AZ5uEurzNg==
 								</data>
 								<key>Size</key>
-								<integer>445827</integer>
+								<integer>487094</integer>
 							</dict>
 							<key>files/stacks_page_page91.js</key>
 							<dict>
@@ -874,11 +874,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tv614nvFbLYJ
-								/KpLGYgn1A==
+								Shqwr8gzAUkg
+								QnOTdkgadw==
 								</data>
 								<key>Size</key>
-								<integer>279535</integer>
+								<integer>305270</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
