listservs change from surveymonkey to google forms
talkboctopus and email listserv

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/2-Seminars-0026-Tutorials/ChildPages/1-Talkboctopus/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/2-Seminars-0026-Tutorials/ChildPages/1-Talkboctopus/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2021-11-22T17:53:56Z</date>
+						<date>2021-11-22T20:53:37Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -864,11 +864,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Z0gQX6EqLmlB
-								eyZ0csh/7w==
+								5idegwMG14Qh
+								cQeWekBPsQ==
 								</data>
 								<key>Size</key>
-								<integer>306243</integer>
+								<integer>306316</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
