--- a/vermontcomplexsystems-foundation.rw8/Pages/09-Community/ChildPages/1-Listserv/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/09-Community/ChildPages/1-Listserv/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2021-11-22T17:53:56Z</date>
+						<date>2021-11-22T21:03:56Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -144,11 +144,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								rOCDn9riQuFU
-								NzQ1lycDBA==
+								zoB4EAztPuZZ
+								OipjnVd0tw==
 								</data>
 								<key>Size</key>
-								<integer>34734</integer>
+								<integer>34813</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
