--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2021-11-22T17:53:56Z</date>
+						<date>2021-11-22T21:03:56Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -194,11 +194,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mx0H9K0QMsMf
-								HF2/KOCkTA==
+								UvMrXBuUkYIi
+								eWJjyTizxg==
 								</data>
 								<key>Size</key>
-								<integer>57418</integer>
+								<integer>57497</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
