--- a/vermontcomplexsystems-foundation.rw8/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2021-11-22T17:53:56Z</date>
+						<date>2021-11-23T14:32:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,11 +44,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9rR1A/KC2xmq
-								FL4Hoa61tg==
+								hTMYJ3wWC8v8
+								X24mTPC9qg==
 								</data>
 								<key>Size</key>
-								<integer>89415</integer>
+								<integer>89417</integer>
 							</dict>
 							<key>index_files/large-526602.png</key>
 							<dict>
