--- a/vermontcomplexsystems-foundation.rw8/Pages/05-Education/ChildPages/5-NIH-T32-in-Complexity-and-Neurobiology/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-Education/ChildPages/5-NIH-T32-in-Complexity-and-Neurobiology/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2021-11-22T17:53:56Z</date>
+						<date>2021-11-23T14:32:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -244,11 +244,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iuHh+SCdPXTI
-								GQ8WV2Zuig==
+								T1ZM7YBEDKFx
+								7CDAOkxgew==
 								</data>
 								<key>Size</key>
-								<integer>87410</integer>
+								<integer>87411</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
