--- a/vermontcomplexsystems-foundation.rw8/Pages/05-Education/ChildPages/6-VERSO/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-Education/ChildPages/6-VERSO/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2021-11-22T18:05:58Z</date>
+						<date>2021-11-23T14:57:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -244,11 +244,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZClL7p5QYD56
-								sQrD56R9LA==
+								iyS6/RD3atFq
+								Z6i1w8NLXA==
 								</data>
 								<key>Size</key>
-								<integer>74564</integer>
+								<integer>75807</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
