--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -32,7 +32,7 @@
 	<string>info</string>
 	<key>selectedItems</key>
 	<array>
-		<string>Publishing Configuration View</string>
+		<string>page4</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
