add PhD student to Students page

--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -23,16 +23,16 @@
 		<string>page40</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<false/>
+	<true/>
 	<key>projectViewVisible</key>
 	<true/>
 	<key>projectViewWidth</key>
 	<real>248</real>
 	<key>selectedInspectorTab</key>
-	<string>info</string>
+	<string>pageSettings</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page4</string>
+		<string>page89</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
