--- a/vermontcomplexsystems-foundation.rw8/Pages/08-People/ChildPages/4-Students-/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/08-People/ChildPages/4-Students-/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2021-11-22T18:05:58Z</date>
+						<date>2021-11-28T18:15:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -194,21 +194,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9CyTOOsc8JQN
-								3UbRpBF+3A==
+								61fpD8m0LyG7
+								fthNPhL5/A==
 								</data>
 								<key>Size</key>
-								<integer>16183</integer>
+								<integer>16205</integer>
 							</dict>
 							<key>files/stacks-image-13dcb14-198x198@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								vIGzYFFxEdlu
-								vo5QULu5YQ==
+								q1ZKipGYYQ2o
+								xDexmTY+HA==
 								</data>
 								<key>Size</key>
-								<integer>23837</integer>
+								<integer>23811</integer>
 							</dict>
 							<key>files/stacks-image-1822fe3-250x250.jpg</key>
 							<dict>
@@ -274,21 +274,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WzF01Ap36SGW
-								lDBZkY24tg==
+								ZQh+vYPrnAOU
+								gvkRqjj8YA==
 								</data>
 								<key>Size</key>
-								<integer>16136</integer>
+								<integer>16128</integer>
 							</dict>
 							<key>files/stacks-image-281e592-250x250@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								GpfCAm+6VPAp
-								puY+WO9yuw==
+								xaLlXdjqz2lj
+								ns0JCaX/5w==
 								</data>
 								<key>Size</key>
-								<integer>23989</integer>
+								<integer>23953</integer>
 							</dict>
 							<key>files/stacks-image-2cab695-200x200.jpg</key>
 							<dict>
@@ -304,61 +304,81 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								XmOJboJHkqUZ
-								TfMQPn+Yrg==
+								7KT7ykn5Vyt3
+								77rLZP8oNQ==
 								</data>
 								<key>Size</key>
-								<integer>15644</integer>
+								<integer>15630</integer>
 							</dict>
 							<key>files/stacks-image-2cede1e-186x250@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								jQgoJGrzKYbZ
-								GbkeZd9hnQ==
+								EmkMbKQh2eHX
+								QYq5H48Hxg==
 								</data>
 								<key>Size</key>
-								<integer>22080</integer>
+								<integer>22073</integer>
 							</dict>
 							<key>files/stacks-image-36472c7-250x250.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								4sxdsYUmF+8a
-								k/1gIvwLrg==
+								e0XgWXhaOhgA
+								W5nN2BxZEA==
 								</data>
 								<key>Size</key>
-								<integer>21542</integer>
+								<integer>21554</integer>
 							</dict>
 							<key>files/stacks-image-36472c7-250x250@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								VExNxRNogBh/
-								EwSz2EodbA==
+								IHNxMdbomgQr
+								VF2W66Pfpw==
 								</data>
 								<key>Size</key>
-								<integer>32973</integer>
+								<integer>32963</integer>
 							</dict>
 							<key>files/stacks-image-3d2ee87-200x200.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								3D0NNFhjIh2O
-								KjDa96QX0Q==
+								Z4jb8h4rH5ov
+								QJQ5y5mvwg==
 								</data>
 								<key>Size</key>
-								<integer>22966</integer>
+								<integer>22947</integer>
 							</dict>
 							<key>files/stacks-image-3d2ee87-200x200@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								bxm8EZ7P3KDx
-								whSMD04tsw==
+								E03SvcA/rHeX
+								5MxXkSXTjA==
 								</data>
 								<key>Size</key>
-								<integer>41848</integer>
+								<integer>41868</integer>
+							</dict>
+							<key>files/stacks-image-4112ee5-200x200.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								MUfvHqJ/n78A
+								WUewB66PWg==
+								</data>
+								<key>Size</key>
+								<integer>12613</integer>
+							</dict>
+							<key>files/stacks-image-4112ee5-200x200@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								pI7uppxozfdK
+								/lQuSr7njA==
+								</data>
+								<key>Size</key>
+								<integer>18784</integer>
 							</dict>
 							<key>files/stacks-image-4220915-200x200.jpg</key>
 							<dict>
@@ -394,21 +414,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								MlvjjdxnBT+V
-								fJd3SJnzvA==
+								TDsbhRz1fAng
+								PXRgaIWQHA==
 								</data>
 								<key>Size</key>
-								<integer>32809</integer>
+								<integer>32869</integer>
 							</dict>
 							<key>files/stacks-image-49b4ce9-250x250@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								eNTVlEsAAdap
-								APesxlFJtA==
+								tHjJYhGSDb48
+								X7aP/0pTxw==
 								</data>
 								<key>Size</key>
-								<integer>63056</integer>
+								<integer>63090</integer>
 							</dict>
 							<key>files/stacks-image-49ca07f-1200x1028.png</key>
 							<dict>
@@ -449,6 +469,26 @@
 								</data>
 								<key>Size</key>
 								<integer>10795</integer>
+							</dict>
+							<key>files/stacks-image-4f13951-162x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								dx6PuZ7iBiPL
+								IsvPmjbIug==
+								</data>
+								<key>Size</key>
+								<integer>75515</integer>
+							</dict>
+							<key>files/stacks-image-4f13951-162x250@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								G5mkESUvbrvf
+								FlBu/UiFsA==
+								</data>
+								<key>Size</key>
+								<integer>273814</integer>
 							</dict>
 							<key>files/stacks-image-541b38d.png</key>
 							<dict>
@@ -534,8 +574,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								L/rtyJRdxgys
-								Th2CwBSZNA==
+								WmtZdxvGXddJ
+								lC2Cis23cg==
 								</data>
 								<key>Size</key>
 								<integer>14890</integer>
@@ -544,11 +584,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IG6fNb5RNPQt
-								kJJryYTXfA==
+								kV8lp1Z7Ajgm
+								oqKicG94HQ==
 								</data>
 								<key>Size</key>
-								<integer>22499</integer>
+								<integer>22528</integer>
 							</dict>
 							<key>files/stacks-image-6561426-200x200.jpg</key>
 							<dict>
@@ -614,21 +654,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								v3BiY4CeFw0b
-								m3yg/NCaKg==
+								7JHrdPGrfJbn
+								4eLsvuHUcg==
 								</data>
 								<key>Size</key>
-								<integer>17785</integer>
+								<integer>17760</integer>
 							</dict>
 							<key>files/stacks-image-6de621d-200x200@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Q4/2RLciUXOF
-								cD86jQY4Rw==
+								ptwyAEdhG4Gr
+								+05kT7ZcHA==
 								</data>
 								<key>Size</key>
-								<integer>30319</integer>
+								<integer>30316</integer>
 							</dict>
 							<key>files/stacks-image-6e12f17.jpg</key>
 							<dict>
@@ -674,21 +714,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								F/c/P8oWx1mj
-								jn3UaVdxCQ==
+								ToONSVdRKkp3
+								iPRU1K2xMw==
 								</data>
 								<key>Size</key>
-								<integer>12361</integer>
+								<integer>12338</integer>
 							</dict>
 							<key>files/stacks-image-7239536-200x200@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								UmAi01txvY19
-								oUFj/6kDew==
+								6rwVER0eylwM
+								PWt11JPfFg==
 								</data>
 								<key>Size</key>
-								<integer>17365</integer>
+								<integer>17360</integer>
 							</dict>
 							<key>files/stacks-image-75adb1c.jpg</key>
 							<dict>
@@ -734,21 +774,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nuiYH2vRpgFA
-								GxBefPZafg==
+								nvYZoLVy4YU1
+								QR7ywmVGWg==
 								</data>
 								<key>Size</key>
-								<integer>16773</integer>
+								<integer>16805</integer>
 							</dict>
 							<key>files/stacks-image-9106f9a-250x250@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								3L8ESuoAwX2T
-								8WKb6LRbMw==
+								3ZlYAZLcBgjq
+								hfxC1MCiJA==
 								</data>
 								<key>Size</key>
-								<integer>24194</integer>
+								<integer>24243</integer>
 							</dict>
 							<key>files/stacks-image-94d2d36-200x200.jpg</key>
 							<dict>
@@ -824,41 +864,41 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fvVRCUBJfpB0
-								nVUPkkM8EQ==
+								eIcGZ/52DMEJ
+								UydRP37KAA==
 								</data>
 								<key>Size</key>
-								<integer>10141</integer>
+								<integer>10135</integer>
 							</dict>
 							<key>files/stacks-image-bc98195-111079@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								wHMJD+dC+siI
-								mRj12QlGmw==
+								VAJ1LvqnKG1l
+								077rtp8S+w==
 								</data>
 								<key>Size</key>
-								<integer>14331</integer>
+								<integer>14344</integer>
 							</dict>
 							<key>files/stacks-image-bc98195-212x250.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								0AGaRCqWh+En
-								t6TWQsK++Q==
+								4qR5kzKqlEcD
+								9MFCezuC+A==
 								</data>
 								<key>Size</key>
-								<integer>11790</integer>
+								<integer>11794</integer>
 							</dict>
 							<key>files/stacks-image-bc98195-212x250@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								EN90GawmeY/k
-								H3njSkkIWg==
+								3j3jFQP9m80X
+								oQClj7OD4w==
 								</data>
 								<key>Size</key>
-								<integer>17072</integer>
+								<integer>17097</integer>
 							</dict>
 							<key>files/stacks-image-bed9ff0-200x200.png</key>
 							<dict>
@@ -914,21 +954,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Gmt98OfcF/gC
-								UZStfkoouw==
+								H+RqA9SiHmn+
+								5L/1kVFtmw==
 								</data>
 								<key>Size</key>
-								<integer>12923</integer>
+								<integer>12932</integer>
 							</dict>
 							<key>files/stacks-image-c0b834e-200x200@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								mtWbpMr1UwPA
-								MeWLgt4w7g==
+								2DCSWlD+97sw
+								qSEUK8/ewQ==
 								</data>
 								<key>Size</key>
-								<integer>17650</integer>
+								<integer>17678</integer>
 							</dict>
 							<key>files/stacks-image-c0f94ea-186x250.jpg</key>
 							<dict>
@@ -1024,21 +1064,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hemx6VcqLOJV
-								+q/0FCx6hg==
+								bkWWLNmdSAwI
+								FKg39NnBnA==
 								</data>
 								<key>Size</key>
-								<integer>23721</integer>
+								<integer>23682</integer>
 							</dict>
 							<key>files/stacks-image-d0b6053-250x250@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								6unrSJm/F3PB
-								DCC9uwvAAA==
+								snj9HUqkeoX5
+								RQ1TTjR8XA==
 								</data>
 								<key>Size</key>
-								<integer>43577</integer>
+								<integer>43659</integer>
 							</dict>
 							<key>files/stacks-image-d3a82ac-250x250.jpg</key>
 							<dict>
@@ -1164,21 +1204,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iBXX+x33/WVZ
-								X2DS6HfLWg==
+								v3Ub01hA/K4g
+								a8txkwIBVQ==
 								</data>
 								<key>Size</key>
-								<integer>15515</integer>
+								<integer>15497</integer>
 							</dict>
 							<key>files/stacks-image-e9f1c85-200x200@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								6cZrC9OtRrg8
-								+e7CzefIJw==
+								/UGO8AwpVVMG
+								QrM55UtVdw==
 								</data>
 								<key>Size</key>
-								<integer>27964</integer>
+								<integer>27976</integer>
 							</dict>
 							<key>files/stacks-image-eaa0881-200x200.jpg</key>
 							<dict>
@@ -1290,35 +1330,45 @@
 								<key>Size</key>
 								<integer>16537</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wgmIAuepvJFg
+								INqwDCfPXQ==
+								</data>
+								<key>Size</key>
+								<integer>1879</integer>
+							</dict>
 							<key>files/stacks_page_page89.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								dzsjFA8nFHJI
-								b+ZJ5TS5nQ==
+								6ra3zr0mxgy0
+								PpXTc0UcYQ==
 								</data>
 								<key>Size</key>
-								<integer>402029</integer>
+								<integer>405481</integer>
 							</dict>
 							<key>files/stacks_page_page89.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								dFLRI6kGeScd
-								D2rJ1h6uww==
+								yMlTQljkWNO3
+								Pp06uBg7pQ==
 								</data>
 								<key>Size</key>
-								<integer>34132</integer>
+								<integer>34293</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Dr9MNfBx/k8O
-								Ji3c2Sf/mA==
+								+iny6fpcRq+T
+								p7mcUsDVRg==
 								</data>
 								<key>Size</key>
-								<integer>271122</integer>
+								<integer>275286</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
