--- a/vermontcomplexsystems-foundation.rw8/Pages/05-Education/ChildPages/6-VERSO/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-Education/ChildPages/6-VERSO/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-01-07T20:31:51Z</date>
+						<date>2022-01-19T16:15:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,131 +104,131 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nc/RlhmvGDDL
-								K+SuTjMLPQ==
+								JV5ejNT3Y8/E
+								W0wI16l5/Q==
 								</data>
 								<key>Size</key>
-								<integer>35262</integer>
+								<integer>35252</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								tvAomUQyeND0
-								vTpTZz/VVg==
+								Su+ZpJd1NY34
+								s0J16tjsFg==
 								</data>
 								<key>Size</key>
-								<integer>68367</integer>
+								<integer>68409</integer>
 							</dict>
 							<key>files/stacks-image-3d19b76-400x400.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								L0gbCGDoi8kG
-								3xqo7f9/mw==
+								T/fW4yMshl3g
+								RqnCnEQe7A==
 								</data>
 								<key>Size</key>
-								<integer>33167</integer>
+								<integer>33168</integer>
 							</dict>
 							<key>files/stacks-image-63452d8-400x400.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Qv2Ibu9QfbMt
-								XDmAaJHvOQ==
+								wR6jn5aboWaI
+								VvlfodUD3A==
 								</data>
 								<key>Size</key>
-								<integer>28689</integer>
+								<integer>28713</integer>
 							</dict>
 							<key>files/stacks-image-728a79b-400x400.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								TsEjLqMSUkOB
-								kp0cffskSw==
+								mL3YqnCTEHom
+								tw8EZ9MI/g==
 								</data>
 								<key>Size</key>
-								<integer>42351</integer>
+								<integer>42370</integer>
 							</dict>
 							<key>files/stacks-image-9874180-400x400.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								2niTNE66HJjm
-								cIb3mzbKgg==
+								KHPblKaB+Ek+
+								TLv3tBL//Q==
 								</data>
 								<key>Size</key>
-								<integer>25178</integer>
+								<integer>25162</integer>
 							</dict>
 							<key>files/stacks-image-9874180-400x400@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								K2tPKxuungpN
-								qJo9lMNHCg==
+								zI9IoAifULRy
+								QEnx5Dzu8g==
 								</data>
 								<key>Size</key>
-								<integer>42627</integer>
+								<integer>42624</integer>
 							</dict>
 							<key>files/stacks-image-9b8fe6d-400x400.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								1zw7vKWfPhCf
-								QKWmxP0C0Q==
+								WukBcCP18tUQ
+								7/nd4H9HFg==
 								</data>
 								<key>Size</key>
-								<integer>30871</integer>
+								<integer>30887</integer>
 							</dict>
 							<key>files/stacks-image-c3556df-400x400.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								dSyZst1P+jnV
-								0l1fAlqJmg==
+								ItDrJDPtPvFv
+								JrEQF4IK5Q==
 								</data>
 								<key>Size</key>
-								<integer>30229</integer>
+								<integer>30234</integer>
 							</dict>
 							<key>files/stacks-image-c3556df-400x400@2x.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								5N16n9MMrhEw
-								qz+Kp483YQ==
+								wgFeSQV+HQ2d
+								PkkYSrGs7A==
 								</data>
 								<key>Size</key>
-								<integer>45062</integer>
+								<integer>45051</integer>
 							</dict>
 							<key>files/stacks-image-cadc2db-400x400.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								OnCStQLcZDpn
-								6sFEb90Ezw==
+								QuGukctr+ZwP
+								9DptNI6KHw==
 								</data>
 								<key>Size</key>
-								<integer>27010</integer>
+								<integer>27008</integer>
 							</dict>
 							<key>files/stacks-image-e97f241-400x164.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Hwezk6t72J5g
-								2awHy7YAqA==
+								0LBTZh9Y4iZ6
+								By0DZuC++A==
 								</data>
 								<key>Size</key>
-								<integer>19470</integer>
+								<integer>19463</integer>
 							</dict>
 							<key>files/stacks_page_page4.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								PSN7GBbBHz0g
-								5QpP6TwRIA==
+								ClXSU/YIW2VB
+								vk4UdGZ/iw==
 								</data>
 								<key>Size</key>
-								<integer>147420</integer>
+								<integer>160412</integer>
 							</dict>
 							<key>files/stacks_page_page4.js</key>
 							<dict>
@@ -244,11 +244,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Et/TB5XE9ZJ6
-								PF+B5z2JzQ==
+								ZIxacSVYvQk9
+								5W1j2Ppv+g==
 								</data>
 								<key>Size</key>
-								<integer>76152</integer>
+								<integer>87481</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
