--- a/vermontcomplexsystems-foundation.rw8/Resources/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Resources/Contents.plist
@@ -44,6 +44,7 @@
 				<string>6D9C1B1F-4217-4AD4-A985-939A9AFA4071</string>
 				<string>70DF144D-1136-4379-8778-75A63CCD824E</string>
 				<string>7331843A-72D0-438E-A429-F0E6943004F5</string>
+				<string>7463D8BA-C6BC-40E8-8AE9-68F4A060688B</string>
 				<string>77538653-5DE3-49FF-A4F3-1BDEE92B2901</string>
 				<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 				<string>7DB9251A-253D-4DC9-B278-9B548A2EB20F</string>
@@ -69,6 +70,7 @@
 				<string>B28CBA5E-30DB-47CC-BED5-8256C6BA0B9B</string>
 				<string>B2BE0B17-86CF-4C80-AAD8-C2BFC143680F</string>
 				<string>B9FC3D17-ED66-407F-99D1-53960F3112B9</string>
+				<string>BAE2BE9D-5657-4DA7-B857-47C2F66C372E</string>
 				<string>BC492657-C8E6-4811-9086-30D8AB5C71F1</string>
 				<string>C0625946-8D34-47A5-B41C-CB413ABA918B</string>
 				<string>C5DF37A1-25DF-4B44-B221-3E3C7DC60A07</string>
@@ -84,12 +86,14 @@
 				<string>E00C1C60-008E-45D7-B339-8798AD97BCA2</string>
 				<string>E1D55B46-2A87-407E-8235-522EC467A3D1</string>
 				<string>E78C5CBC-A97C-4099-9A03-3FA6FD119B1A</string>
+				<string>E9A11568-DC5D-4AA5-AD04-A8C3CCEB54DC</string>
 				<string>EE055259-CFA6-4A00-BE87-8C74794CA1D3</string>
 				<string>EEA33561-8756-4215-9B9F-C16AEAFB0FBF</string>
 				<string>F2F61443-7A00-4B6A-B233-E548140F59E1</string>
 				<string>F6C6F0B9-B936-4214-87D0-F8625C03B1FC</string>
 				<string>F7B7DD0F-D30C-4CE1-AC65-5CE2B677E47F</string>
 				<string>FAB9A100-E7DF-4109-8849-2811F9706C69</string>
+				<string>FBF79A4A-3E6D-40C9-AC4D-75662580E8D4</string>
 			</array>
 		</dict>
 	</array>
