VERSO job postings
on verso page and open positions page

--- a/vermontcomplexsystems-foundation.rw8/Pages/05-Education/ChildPages/6-VERSO/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-Education/ChildPages/6-VERSO/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-01-19T16:15:52Z</date>
+						<date>2022-01-20T18:33:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -224,11 +224,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ClXSU/YIW2VB
-								vk4UdGZ/iw==
+								ggQEnvc5uHsm
+								AoYMA1TsMg==
 								</data>
 								<key>Size</key>
-								<integer>160412</integer>
+								<integer>163462</integer>
 							</dict>
 							<key>files/stacks_page_page4.js</key>
 							<dict>
@@ -244,11 +244,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZIxacSVYvQk9
-								5W1j2Ppv+g==
+								kD3LRC+V8GTD
+								gnhzTYfOXA==
 								</data>
 								<key>Size</key>
-								<integer>87481</integer>
+								<integer>93447</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
