--- a/vermontcomplexsystems-foundation.rw8/Pages/08-People/ChildPages/5-Open-positions/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/08-People/ChildPages/5-Open-positions/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-01-07T20:31:52Z</date>
+						<date>2022-01-20T18:43:56Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,51 +104,51 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nc/RlhmvGDDL
-								K+SuTjMLPQ==
+								JV5ejNT3Y8/E
+								W0wI16l5/Q==
 								</data>
 								<key>Size</key>
-								<integer>35262</integer>
+								<integer>35252</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								tvAomUQyeND0
-								vTpTZz/VVg==
+								Su+ZpJd1NY34
+								s0J16tjsFg==
 								</data>
 								<key>Size</key>
-								<integer>68367</integer>
+								<integer>68409</integer>
 							</dict>
 							<key>files/stacks-image-acab9a1-1200x1028.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								1C7D1xYZuEJI
-								jHk3LlEdWQ==
+								KnvuegUiec2S
+								Ryb1LSV9Gw==
 								</data>
 								<key>Size</key>
-								<integer>403684</integer>
+								<integer>403536</integer>
 							</dict>
 							<key>files/stacks-image-e97f241-400x164.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Hwezk6t72J5g
-								2awHy7YAqA==
+								0LBTZh9Y4iZ6
+								By0DZuC++A==
 								</data>
 								<key>Size</key>
-								<integer>19470</integer>
+								<integer>19463</integer>
 							</dict>
 							<key>files/stacks_page_page6.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZAuGMVeiAhzl
-								DwTWJUz/Yg==
+								+mtmv24KMc3r
+								Jn3iGK0qiA==
 								</data>
 								<key>Size</key>
-								<integer>120930</integer>
+								<integer>111832</integer>
 							</dict>
 							<key>files/stacks_page_page6.js</key>
 							<dict>
@@ -164,11 +164,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								gJn0XtRPLp2b
-								SCJ5KMCiFQ==
+								/L/+4EROvwTX
+								vQDeydCjuQ==
 								</data>
 								<key>Size</key>
-								<integer>58414</integer>
+								<integer>55998</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
