update application deadline for CSDS master's
updated to 2/15

--- a/vermontcomplexsystems-foundation.rw8/Pages/05-Education/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-Education/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-01-07T20:31:51Z</date>
+						<date>2022-01-24T18:02:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -330,6 +330,16 @@
 								<key>Size</key>
 								<integer>19470</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wgmIAuepvJFg
+								INqwDCfPXQ==
+								</data>
+								<key>Size</key>
+								<integer>1879</integer>
+							</dict>
 							<key>files/stacks_page_page0.css</key>
 							<dict>
 								<key>Digest</key>
@@ -354,11 +364,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bSc3r1IAvZ4I
-								81UEsgbymw==
+								kY6gtfXdF+BP
+								SuH/j4K8JA==
 								</data>
 								<key>Size</key>
-								<integer>133627</integer>
+								<integer>133628</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
